--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "lucide-react": "^0.294.0",
-    "next": "^14.2.32",
+    "next": "^14.2.33",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
